lexical.output
Terminals unused in grammar

   COMMENT
   KEYWORD
   PUNCT_POINT


Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations declaration_methodes instruction_composee
    2        | PROGRAM IDENT PUNCT_POINT_VIRGULE declaration_methodes instruction_composee
    3        | PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations instruction_composee
    4        | PROGRAM IDENT error

    5 type: TYPE
    6     | ARRAY OPEN_CRO NUMBER DEUX_P NUMBER CLOSE_CRO OF TYPE
    7     | ARRAY error
    8     | ARRAY OPEN_CRO NUMBER DEUX_P NUMBER
    9     | ARRAY OPEN_CRO error
   10     | ARRAY OPEN_CRO NUMBER DEUX_P error
   11     | ARRAY OPEN_CRO NUMBER DEUX_P NUMBER CLOSE_CRO

   12 declaration: VAR declaration_corps

   13 declaration_corps: liste_identificateurs PUNCT_DEUX_POINTS type PUNCT_POINT_VIRGULE
   14                  | liste_identificateurs PUNCT_DEUX_POINTS type error
   15                  | liste_identificateurs error
   16                  | liste_identificateurs PUNCT_DEUX_POINTS error

   17 liste_declarations: declaration
   18                   | declaration PUNCT_VIRGULE liste_declarations

   19 liste_identificateurs: IDENT
   20                      | IDENT PUNCT_VIRGULE liste_identificateurs

   21 declaration_methodes: declaration_methode
   22                     | declaration_methode declaration_methodes

   23 declaration_methode: entete_methode instruction_composee
   24                    | entete_methode liste_declarations instruction_composee
   25                    | entete_methode error
   26                    | entete_methode liste_declarations error

   27 entete_methode: PROCEDURE IDENT arguments PUNCT_POINT_VIRGULE
   28               | PROCEDURE IDENT PUNCT_POINT_VIRGULE
   29               | PROCEDURE IDENT error
   30               | error IDENT arguments PUNCT_POINT_VIRGULE
   31               | PROCEDURE error
   32               | PROCEDURE IDENT arguments error

   33 arguments: OPEN_PAR liste_parametres CLOSE_PAR
   34          | OPEN_PAR CLOSE_PAR
   35          | OPEN_PAR liste_parametres error
   36          | OPEN_PAR error

   37 liste_parametres: declaration_corps
   38                 | declaration_corps PUNCT_POINT_VIRGULE liste_parametres

   39 instruction_composee: T_BEGIN liste_instructions END
   40                     | T_BEGIN liste_instructions error

   41 liste_instructions: instruction PUNCT_POINT_VIRGULE
   42                   | instruction error
   43                   | instruction PUNCT_POINT_VIRGULE liste_instructions

   44 instruction: lvalue OPP_AFFECT expression
   45            | lvalue error
   46            | appel_methode
   47            | IF expression THEN instruction ELSE instruction
   48            | IF error
   49            | IF expression THEN error
   50            | IF expression THEN instruction ELSE error
   51            | IF expression error
   52            | IF expression THEN instruction error instruction
   53            | WHILE expression DO instruction
   54            | WHILE expression error
   55            | WHILE error
   56            | WHILE expression DO error
   57            | PRINT OPEN_PAR liste_identificateurs CLOSE_PAR
   58            | PRINT error
   59            | PRINT OPEN_PAR liste_identificateurs error
   60            | PRINT OPEN_PAR error

   61 lvalue: IDENT
   62       | IDENT OPEN_CRO expression CLOSE_CRO
   63       | IDENT OPEN_CRO expression error
   64       | IDENT OPEN_CRO error

   65 appel_methode: IDENT OPEN_PAR liste_expressions CLOSE_PAR
   66              | IDENT OPEN_PAR CLOSE_PAR
   67              | IDENT OPEN_PAR liste_expressions error

   68 liste_expressions: expression
   69                  | liste_expressions PUNCT_VIRGULE expression

   70 expression: facteur
   71           | facteur ADD_OP facteur
   72           | facteur MUL_OP facteur

   73 facteur: NUMBER
   74        | IDENT
   75        | IDENT OPEN_CRO expression CLOSE_CRO
   76        | IDENT OPEN_CRO expression error
   77        | IDENT OPEN_CRO error
   78        | OPEN_PAR expression CLOSE_PAR
   79        | OPEN_PAR expression error
   80        | OPEN_PAR error


Terminals, with rules where they appear

$end (0) 0
error (256) 4 7 9 10 14 15 16 25 26 29 30 31 32 35 36 40 42 45 48 49
    50 51 52 54 55 56 58 59 60 63 64 67 76 77 79 80
PROGRAM (258) 1 2 3 4
IDENT (259) 1 2 3 4 19 20 27 28 29 30 32 61 62 63 64 65 66 67 74 75
    76 77
COMMENT (260)
OPP_AFFECT (261) 44
NUMBER (262) 6 8 10 11 73
OPEN_PAR (263) 33 34 35 36 57 59 60 65 66 67 78 79 80
CLOSE_PAR (264) 33 34 57 65 66 78
MUL_OP (265) 72
ADD_OP (266) 71
TYPE (267) 5 6
KEYWORD (268)
PUNCT_POINT (269)
PUNCT_VIRGULE (270) 18 20 69
PUNCT_POINT_VIRGULE (271) 1 2 3 13 27 28 30 38 41 43
PUNCT_DEUX_POINTS (272) 13 14 16
VAR (273) 12
PROCEDURE (274) 27 28 29 31 32
END (275) 39
IF (276) 47 48 49 50 51 52
THEN (277) 47 49 50 52
ELSE (278) 47 50
PRINT (279) 57 58 59 60
WHILE (280) 53 54 55 56
DO (281) 53 56
OPEN_CRO (282) 6 8 9 10 11 62 63 64 75 76 77
CLOSE_CRO (283) 6 11 62 75
ARRAY (284) 6 7 8 9 10 11
OF (285) 6
DEUX_P (286) 6 8 10 11
T_BEGIN (287) 39 40


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1 2 3 4, on right: 0
type (35)
    on left: 5 6 7 8 9 10 11, on right: 13 14
declaration (36)
    on left: 12, on right: 17 18
declaration_corps (37)
    on left: 13 14 15 16, on right: 12 37 38
liste_declarations (38)
    on left: 17 18, on right: 1 3 18 24 26
liste_identificateurs (39)
    on left: 19 20, on right: 13 14 15 16 20 57 59
declaration_methodes (40)
    on left: 21 22, on right: 1 2 22
declaration_methode (41)
    on left: 23 24 25 26, on right: 21 22
entete_methode (42)
    on left: 27 28 29 30 31 32, on right: 23 24 25 26
arguments (43)
    on left: 33 34 35 36, on right: 27 30 32
liste_parametres (44)
    on left: 37 38, on right: 33 35 38
instruction_composee (45)
    on left: 39 40, on right: 1 2 3 23 24
liste_instructions (46)
    on left: 41 42 43, on right: 39 40 43
instruction (47)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60, on right:
    41 42 43 47 50 52 53
lvalue (48)
    on left: 61 62 63 64, on right: 44 45
appel_methode (49)
    on left: 65 66 67, on right: 46
liste_expressions (50)
    on left: 68 69, on right: 65 67 69
expression (51)
    on left: 70 71 72, on right: 44 47 49 50 51 52 53 54 56 62 63 68
    69 75 76 78 79
facteur (52)
    on left: 73 74 75 76 77 78 79 80, on right: 70 71 72


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


state 1

    1 program: PROGRAM . IDENT PUNCT_POINT_VIRGULE liste_declarations declaration_methodes instruction_composee
    2        | PROGRAM . IDENT PUNCT_POINT_VIRGULE declaration_methodes instruction_composee
    3        | PROGRAM . IDENT PUNCT_POINT_VIRGULE liste_declarations instruction_composee
    4        | PROGRAM . IDENT error

    IDENT  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: PROGRAM IDENT . PUNCT_POINT_VIRGULE liste_declarations declaration_methodes instruction_composee
    2        | PROGRAM IDENT . PUNCT_POINT_VIRGULE declaration_methodes instruction_composee
    3        | PROGRAM IDENT . PUNCT_POINT_VIRGULE liste_declarations instruction_composee
    4        | PROGRAM IDENT . error

    error                shift, and go to state 5
    PUNCT_POINT_VIRGULE  shift, and go to state 6


state 4

    0 $accept: program $end .

    $default  accept


state 5

    4 program: PROGRAM IDENT error .

    $default  reduce using rule 4 (program)


state 6

    1 program: PROGRAM IDENT PUNCT_POINT_VIRGULE . liste_declarations declaration_methodes instruction_composee
    2        | PROGRAM IDENT PUNCT_POINT_VIRGULE . declaration_methodes instruction_composee
    3        | PROGRAM IDENT PUNCT_POINT_VIRGULE . liste_declarations instruction_composee

    error      shift, and go to state 7
    VAR        shift, and go to state 8
    PROCEDURE  shift, and go to state 9

    declaration           go to state 10
    liste_declarations    go to state 11
    declaration_methodes  go to state 12
    declaration_methode   go to state 13
    entete_methode        go to state 14


state 7

   30 entete_methode: error . IDENT arguments PUNCT_POINT_VIRGULE

    IDENT  shift, and go to state 15


state 8

   12 declaration: VAR . declaration_corps

    IDENT  shift, and go to state 16

    declaration_corps      go to state 17
    liste_identificateurs  go to state 18


state 9

   27 entete_methode: PROCEDURE . IDENT arguments PUNCT_POINT_VIRGULE
   28               | PROCEDURE . IDENT PUNCT_POINT_VIRGULE
   29               | PROCEDURE . IDENT error
   31               | PROCEDURE . error
   32               | PROCEDURE . IDENT arguments error

    error  shift, and go to state 19
    IDENT  shift, and go to state 20


state 10

   17 liste_declarations: declaration .
   18                   | declaration . PUNCT_VIRGULE liste_declarations

    PUNCT_VIRGULE  shift, and go to state 21

    $default  reduce using rule 17 (liste_declarations)


state 11

    1 program: PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations . declaration_methodes instruction_composee
    3        | PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations . instruction_composee

    error      shift, and go to state 7
    PROCEDURE  shift, and go to state 9
    T_BEGIN    shift, and go to state 22

    declaration_methodes  go to state 23
    declaration_methode   go to state 13
    entete_methode        go to state 14
    instruction_composee  go to state 24


state 12

    2 program: PROGRAM IDENT PUNCT_POINT_VIRGULE declaration_methodes . instruction_composee

    T_BEGIN  shift, and go to state 22

    instruction_composee  go to state 25


state 13

   21 declaration_methodes: declaration_methode .
   22                     | declaration_methode . declaration_methodes

    error      shift, and go to state 7
    PROCEDURE  shift, and go to state 9

    T_BEGIN  reduce using rule 21 (declaration_methodes)

    declaration_methodes  go to state 26
    declaration_methode   go to state 13
    entete_methode        go to state 14


state 14

   23 declaration_methode: entete_methode . instruction_composee
   24                    | entete_methode . liste_declarations instruction_composee
   25                    | entete_methode . error
   26                    | entete_methode . liste_declarations error

    error    shift, and go to state 27
    VAR      shift, and go to state 8
    T_BEGIN  shift, and go to state 22

    declaration           go to state 10
    liste_declarations    go to state 28
    instruction_composee  go to state 29


state 15

   30 entete_methode: error IDENT . arguments PUNCT_POINT_VIRGULE

    OPEN_PAR  shift, and go to state 30

    arguments  go to state 31


state 16

   19 liste_identificateurs: IDENT .
   20                      | IDENT . PUNCT_VIRGULE liste_identificateurs

    PUNCT_VIRGULE  shift, and go to state 32

    $default  reduce using rule 19 (liste_identificateurs)


state 17

   12 declaration: VAR declaration_corps .

    $default  reduce using rule 12 (declaration)


state 18

   13 declaration_corps: liste_identificateurs . PUNCT_DEUX_POINTS type PUNCT_POINT_VIRGULE
   14                  | liste_identificateurs . PUNCT_DEUX_POINTS type error
   15                  | liste_identificateurs . error
   16                  | liste_identificateurs . PUNCT_DEUX_POINTS error

    error              shift, and go to state 33
    PUNCT_DEUX_POINTS  shift, and go to state 34


state 19

   31 entete_methode: PROCEDURE error .

    $default  reduce using rule 31 (entete_methode)


state 20

   27 entete_methode: PROCEDURE IDENT . arguments PUNCT_POINT_VIRGULE
   28               | PROCEDURE IDENT . PUNCT_POINT_VIRGULE
   29               | PROCEDURE IDENT . error
   32               | PROCEDURE IDENT . arguments error

    error                shift, and go to state 35
    OPEN_PAR             shift, and go to state 30
    PUNCT_POINT_VIRGULE  shift, and go to state 36

    arguments  go to state 37


state 21

   18 liste_declarations: declaration PUNCT_VIRGULE . liste_declarations

    VAR  shift, and go to state 8

    declaration         go to state 10
    liste_declarations  go to state 38


state 22

   39 instruction_composee: T_BEGIN . liste_instructions END
   40                     | T_BEGIN . liste_instructions error

    IDENT  shift, and go to state 39
    IF     shift, and go to state 40
    PRINT  shift, and go to state 41
    WHILE  shift, and go to state 42

    liste_instructions  go to state 43
    instruction         go to state 44
    lvalue              go to state 45
    appel_methode       go to state 46


state 23

    1 program: PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations declaration_methodes . instruction_composee

    T_BEGIN  shift, and go to state 22

    instruction_composee  go to state 47


state 24

    3 program: PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations instruction_composee .

    $default  reduce using rule 3 (program)


state 25

    2 program: PROGRAM IDENT PUNCT_POINT_VIRGULE declaration_methodes instruction_composee .

    $default  reduce using rule 2 (program)


state 26

   22 declaration_methodes: declaration_methode declaration_methodes .

    $default  reduce using rule 22 (declaration_methodes)


state 27

   25 declaration_methode: entete_methode error .

    $default  reduce using rule 25 (declaration_methode)


state 28

   24 declaration_methode: entete_methode liste_declarations . instruction_composee
   26                    | entete_methode liste_declarations . error

    error    shift, and go to state 48
    T_BEGIN  shift, and go to state 22

    instruction_composee  go to state 49


state 29

   23 declaration_methode: entete_methode instruction_composee .

    $default  reduce using rule 23 (declaration_methode)


state 30

   33 arguments: OPEN_PAR . liste_parametres CLOSE_PAR
   34          | OPEN_PAR . CLOSE_PAR
   35          | OPEN_PAR . liste_parametres error
   36          | OPEN_PAR . error

    error      shift, and go to state 50
    IDENT      shift, and go to state 16
    CLOSE_PAR  shift, and go to state 51

    declaration_corps      go to state 52
    liste_identificateurs  go to state 18
    liste_parametres       go to state 53


state 31

   30 entete_methode: error IDENT arguments . PUNCT_POINT_VIRGULE

    PUNCT_POINT_VIRGULE  shift, and go to state 54


state 32

   20 liste_identificateurs: IDENT PUNCT_VIRGULE . liste_identificateurs

    IDENT  shift, and go to state 16

    liste_identificateurs  go to state 55


state 33

   15 declaration_corps: liste_identificateurs error .

    $default  reduce using rule 15 (declaration_corps)


state 34

   13 declaration_corps: liste_identificateurs PUNCT_DEUX_POINTS . type PUNCT_POINT_VIRGULE
   14                  | liste_identificateurs PUNCT_DEUX_POINTS . type error
   16                  | liste_identificateurs PUNCT_DEUX_POINTS . error

    error  shift, and go to state 56
    TYPE   shift, and go to state 57
    ARRAY  shift, and go to state 58

    type  go to state 59


state 35

   29 entete_methode: PROCEDURE IDENT error .

    $default  reduce using rule 29 (entete_methode)


state 36

   28 entete_methode: PROCEDURE IDENT PUNCT_POINT_VIRGULE .

    $default  reduce using rule 28 (entete_methode)


state 37

   27 entete_methode: PROCEDURE IDENT arguments . PUNCT_POINT_VIRGULE
   32               | PROCEDURE IDENT arguments . error

    error                shift, and go to state 60
    PUNCT_POINT_VIRGULE  shift, and go to state 61


state 38

   18 liste_declarations: declaration PUNCT_VIRGULE liste_declarations .

    $default  reduce using rule 18 (liste_declarations)


state 39

   61 lvalue: IDENT .
   62       | IDENT . OPEN_CRO expression CLOSE_CRO
   63       | IDENT . OPEN_CRO expression error
   64       | IDENT . OPEN_CRO error
   65 appel_methode: IDENT . OPEN_PAR liste_expressions CLOSE_PAR
   66              | IDENT . OPEN_PAR CLOSE_PAR
   67              | IDENT . OPEN_PAR liste_expressions error

    OPEN_PAR  shift, and go to state 62
    OPEN_CRO  shift, and go to state 63

    $default  reduce using rule 61 (lvalue)


state 40

   47 instruction: IF . expression THEN instruction ELSE instruction
   48            | IF . error
   49            | IF . expression THEN error
   50            | IF . expression THEN instruction ELSE error
   51            | IF . expression error
   52            | IF . expression THEN instruction error instruction

    error     shift, and go to state 64
    IDENT     shift, and go to state 65
    NUMBER    shift, and go to state 66
    OPEN_PAR  shift, and go to state 67

    expression  go to state 68
    facteur     go to state 69


state 41

   57 instruction: PRINT . OPEN_PAR liste_identificateurs CLOSE_PAR
   58            | PRINT . error
   59            | PRINT . OPEN_PAR liste_identificateurs error
   60            | PRINT . OPEN_PAR error

    error     shift, and go to state 70
    OPEN_PAR  shift, and go to state 71


state 42

   53 instruction: WHILE . expression DO instruction
   54            | WHILE . expression error
   55            | WHILE . error
   56            | WHILE . expression DO error

    error     shift, and go to state 72
    IDENT     shift, and go to state 65
    NUMBER    shift, and go to state 66
    OPEN_PAR  shift, and go to state 67

    expression  go to state 73
    facteur     go to state 69


state 43

   39 instruction_composee: T_BEGIN liste_instructions . END
   40                     | T_BEGIN liste_instructions . error

    error  shift, and go to state 74
    END    shift, and go to state 75


state 44

   41 liste_instructions: instruction . PUNCT_POINT_VIRGULE
   42                   | instruction . error
   43                   | instruction . PUNCT_POINT_VIRGULE liste_instructions

    error                shift, and go to state 76
    PUNCT_POINT_VIRGULE  shift, and go to state 77


state 45

   44 instruction: lvalue . OPP_AFFECT expression
   45            | lvalue . error

    error       shift, and go to state 78
    OPP_AFFECT  shift, and go to state 79


state 46

   46 instruction: appel_methode .

    $default  reduce using rule 46 (instruction)


state 47

    1 program: PROGRAM IDENT PUNCT_POINT_VIRGULE liste_declarations declaration_methodes instruction_composee .

    $default  reduce using rule 1 (program)


state 48

   26 declaration_methode: entete_methode liste_declarations error .

    $default  reduce using rule 26 (declaration_methode)


state 49

   24 declaration_methode: entete_methode liste_declarations instruction_composee .

    $default  reduce using rule 24 (declaration_methode)


state 50

   36 arguments: OPEN_PAR error .

    $default  reduce using rule 36 (arguments)


state 51

   34 arguments: OPEN_PAR CLOSE_PAR .

    $default  reduce using rule 34 (arguments)


state 52

   37 liste_parametres: declaration_corps .
   38                 | declaration_corps . PUNCT_POINT_VIRGULE liste_parametres

    PUNCT_POINT_VIRGULE  shift, and go to state 80

    $default  reduce using rule 37 (liste_parametres)


state 53

   33 arguments: OPEN_PAR liste_parametres . CLOSE_PAR
   35          | OPEN_PAR liste_parametres . error

    error      shift, and go to state 81
    CLOSE_PAR  shift, and go to state 82


state 54

   30 entete_methode: error IDENT arguments PUNCT_POINT_VIRGULE .

    $default  reduce using rule 30 (entete_methode)


state 55

   20 liste_identificateurs: IDENT PUNCT_VIRGULE liste_identificateurs .

    $default  reduce using rule 20 (liste_identificateurs)


state 56

   16 declaration_corps: liste_identificateurs PUNCT_DEUX_POINTS error .

    $default  reduce using rule 16 (declaration_corps)


state 57

    5 type: TYPE .

    $default  reduce using rule 5 (type)


state 58

    6 type: ARRAY . OPEN_CRO NUMBER DEUX_P NUMBER CLOSE_CRO OF TYPE
    7     | ARRAY . error
    8     | ARRAY . OPEN_CRO NUMBER DEUX_P NUMBER
    9     | ARRAY . OPEN_CRO error
   10     | ARRAY . OPEN_CRO NUMBER DEUX_P error
   11     | ARRAY . OPEN_CRO NUMBER DEUX_P NUMBER CLOSE_CRO

    error     shift, and go to state 83
    OPEN_CRO  shift, and go to state 84


state 59

   13 declaration_corps: liste_identificateurs PUNCT_DEUX_POINTS type . PUNCT_POINT_VIRGULE
   14                  | liste_identificateurs PUNCT_DEUX_POINTS type . error

    error                shift, and go to state 85
    PUNCT_POINT_VIRGULE  shift, and go to state 86


state 60

   32 entete_methode: PROCEDURE IDENT arguments error .

    $default  reduce using rule 32 (entete_methode)


state 61

   27 entete_methode: PROCEDURE IDENT arguments PUNCT_POINT_VIRGULE .

    $default  reduce using rule 27 (entete_methode)


state 62

   65 appel_methode: IDENT OPEN_PAR . liste_expressions CLOSE_PAR
   66              | IDENT OPEN_PAR . CLOSE_PAR
   67              | IDENT OPEN_PAR . liste_expressions error

    IDENT      shift, and go to state 65
    NUMBER     shift, and go to state 66
    OPEN_PAR   shift, and go to state 67
    CLOSE_PAR  shift, and go to state 87

    liste_expressions  go to state 88
    expression         go to state 89
    facteur            go to state 69


state 63

   62 lvalue: IDENT OPEN_CRO . expression CLOSE_CRO
   63       | IDENT OPEN_CRO . expression error
   64       | IDENT OPEN_CRO . error

    error     shift, and go to state 90
    IDENT     shift, and go to state 65
    NUMBER    shift, and go to state 66
    OPEN_PAR  shift, and go to state 67

    expression  go to state 91
    facteur     go to state 69


state 64

   48 instruction: IF error .

    $default  reduce using rule 48 (instruction)


state 65

   74 facteur: IDENT .
   75        | IDENT . OPEN_CRO expression CLOSE_CRO
   76        | IDENT . OPEN_CRO expression error
   77        | IDENT . OPEN_CRO error

    OPEN_CRO  shift, and go to state 92

    $default  reduce using rule 74 (facteur)


state 66

   73 facteur: NUMBER .

    $default  reduce using rule 73 (facteur)


state 67

   78 facteur: OPEN_PAR . expression CLOSE_PAR
   79        | OPEN_PAR . expression error
   80        | OPEN_PAR . error

    error     shift, and go to state 93
    IDENT     shift, and go to state 65
    NUMBER    shift, and go to state 66
    OPEN_PAR  shift, and go to state 67

    expression  go to state 94
    facteur     go to state 69


state 68

   47 instruction: IF expression . THEN instruction ELSE instruction
   49            | IF expression . THEN error
   50            | IF expression . THEN instruction ELSE error
   51            | IF expression . error
   52            | IF expression . THEN instruction error instruction

    error  shift, and go to state 95
    THEN   shift, and go to state 96


state 69

   70 expression: facteur .
   71           | facteur . ADD_OP facteur
   72           | facteur . MUL_OP facteur

    MUL_OP  shift, and go to state 97
    ADD_OP  shift, and go to state 98

    $default  reduce using rule 70 (expression)


state 70

   58 instruction: PRINT error .

    $default  reduce using rule 58 (instruction)


state 71

   57 instruction: PRINT OPEN_PAR . liste_identificateurs CLOSE_PAR
   59            | PRINT OPEN_PAR . liste_identificateurs error
   60            | PRINT OPEN_PAR . error

    error  shift, and go to state 99
    IDENT  shift, and go to state 16

    liste_identificateurs  go to state 100


state 72

   55 instruction: WHILE error .

    $default  reduce using rule 55 (instruction)


state 73

   53 instruction: WHILE expression . DO instruction
   54            | WHILE expression . error
   56            | WHILE expression . DO error

    error  shift, and go to state 101
    DO     shift, and go to state 102


state 74

   40 instruction_composee: T_BEGIN liste_instructions error .

    $default  reduce using rule 40 (instruction_composee)


state 75

   39 instruction_composee: T_BEGIN liste_instructions END .

    $default  reduce using rule 39 (instruction_composee)


state 76

   42 liste_instructions: instruction error .

    $default  reduce using rule 42 (liste_instructions)


state 77

   41 liste_instructions: instruction PUNCT_POINT_VIRGULE .
   43                   | instruction PUNCT_POINT_VIRGULE . liste_instructions

    IDENT  shift, and go to state 39
    IF     shift, and go to state 40
    PRINT  shift, and go to state 41
    WHILE  shift, and go to state 42

    $default  reduce using rule 41 (liste_instructions)

    liste_instructions  go to state 103
    instruction         go to state 44
    lvalue              go to state 45
    appel_methode       go to state 46


state 78

   45 instruction: lvalue error .

    $default  reduce using rule 45 (instruction)


state 79

   44 instruction: lvalue OPP_AFFECT . expression

    IDENT     shift, and go to state 65
    NUMBER    shift, and go to state 66
    OPEN_PAR  shift, and go to state 67
